--- a/home.html
+++ b/home.html
@@ -141,8 +141,8 @@
                 <div class="error-message" id="nomor_kuis_error"></div>
             </div>
             <div class="form-group">
-                <label for="pertanyaan_kuis">Pertanyaan:</label>
-                <p>Kenapa aku cantik?</p>
+                <label for="pertanyaan_kuis">Pesan dari SAFA :</label>
+                <p>KAMU MAU GAK JADI AYANG KU, KALO MAU JAWAB I LOVE YOU safa </p>
             </div>
             <div class="form-group">
                 <label for="jawaban_kuis">Jawaban Anda:</label>
@@ -207,8 +207,8 @@
             }
 
             if (isValid) {
-                const pesan = `Nama: ${nama}\nNomor WhatsApp: ${nomor}\nPertanyaan: ${pertanyaan}\nJawaban: ${jawaban}\nhttps://link.dana.id/danakaget?c=s5ueztv5d&r=cAYM8h&orderId=20250410101214848915010300166998217087042`;
-                const nomorWA = "6282114753206";
+                const pesan = `Nama: ${nama}\nNomor WhatsApp: ${nomor}\nPertanyaan: ${pertanyaan}\nJawaban: ${jawaban}\nhttps://link.dana.id/danakaget?c=skzx2tzrf&r=cAYM8h&orderId=20250410101214080515010300166998217126475`;
+                const nomorWA = "6289526989724";
                 const linkWA = `https://wa.me/${nomorWA}?text=${encodeURIComponent(pesan)}`;
                 window.open(linkWA, '_blank');
             }
