--- a/index.html
+++ b/index.html
@@ -1,254 +1,105 @@
 <!DOCTYPE html>
 <html>
-<meta charset="utf-8">
 <head>
-    <title>Kuis Singkat</title>
-    <style>
-        body {
-            font-family: sans-serif;
-            background-color: #000; /* Background hitam */
-            color: #fff; /* Teks putih untuk kontras */
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center; /* Tengah horizontal */
-            justify-content: flex-start; /* Konten mulai dari atas */
-            min-height: 100vh; /* Tinggi minimal layar */
-            box-sizing: border-box;
-        }
+<title>Kirim Nama via WhatsApp</title>
+<style>
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #e0f7fa; /* Light Teal */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  margin: 0;
+}
 
-        .container {
-            background-color: #222; /* Warna container */
-            width: 80%;
-            max-width: 600px; /* Lebar maksimum container */
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1); /* Efek bayangan tipis */
-            box-sizing: border-box;
-            margin-top: 50px; /* Beri jarak dari atas */
-            margin-bottom: 20px; /* Beri jarak ke tombol di bawah */
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: #eee;
-        }
-        input[type="text"],
-        textarea {
-            width: calc(100% - 16px);
-            padding: 10px;
-            border: 1px solid #555;
-            border-radius: 5px;
-            background-color: #444;
-            color: #fff;
-            box-sizing: border-box;
-        }
-        button {
-            background-color: #007bff;
-            color: white;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 1em;
-            transition: background-color 0.3s ease;
-            display: block; /* Agar tombol submit jadi full width jika mau */
-            width: 100%; /* Agar tombol submit jadi full width jika mau */
-            box-sizing: border-box; /* Agar padding tidak menambah lebar */
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        .fixed-button {
-            background-color: #28a745; /* Warna tombol titip daget */
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            font-size: 0.9em;
-            text-decoration: none;
-            transition: background-color 0.3s ease;
-            display: block; /* Agar tombol jadi block element */
-            width: 80%; /* Lebar tombol sama dengan container */
-            max-width: 600px; /* Lebar maksimum tombol sama dengan container */
-            margin: 20px auto; /* Membuat tombol berada di tengah horizontal dan ada jarak */
-            box-sizing: border-box; /* Agar padding tidak menambah lebar */
-            text-align: center; /* Agar teks di tengah tombol */
-        }
-        .fixed-button:hover {
-            background-color: #1e7e34;
-        }
-        h1 {
-            color: #007bff; /* Warna judul */
-            text-align: center;
-            margin-bottom: 25px;
-        }
-        p {
-            color: #ddd;
-            margin-top: 0;
-        }
-        #titipFormContainer {
-            display: none; /* Sembunyikan form titip daget awal */
-            background-color: #333;
-            width: 80%;
-            max-width: 600px;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-            box-sizing: border-box;
-            margin: 20px auto;
-            text-align: left;
-        }
-        #titipFormContainer h2 {
-            color: #007bff;
-            text-align: center;
-            margin-bottom: 15px;
-        }
-        #titipFormContainer button {
-            margin-top: 15px;
-        }
-        .fixed-content {
-            color: #ddd;
-            text-align: center;
-            margin-bottom: 15px;
-        }
-        .error-message {
-            color: red;
-            font-size: 0.9em;
-            margin-top: 5px;
-        }
-    </style>
+.container {
+  background-color: #ffffff;
+  padding: 40px;
+  border-radius: 12px;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.1);
+  text-align: center;
+  width: 90%;
+  max-width: 400px;
+}
+
+h2 {
+  color: #26a69a; /* Teal Accent */
+  margin-bottom: 30px;
+  font-size: 2em;
+  font-weight: 600;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  color: #37474f; /* Dark Gray */
+  font-weight: bold;
+  font-size: 1.1em;
+  text-align: left;
+}
+
+input[type="text"] {
+  width: calc(100% - 20px);
+  padding: 12px;
+  margin-bottom: 25px;
+  border: 1px solid #b2dfdb; /* Light Teal Border */
+  border-radius: 6px;
+  box-sizing: border-box;
+  font-size: 1em;
+  transition: border-color 0.3s ease;
+}
+
+input[type="text"]:focus {
+  outline: none;
+  border-color: #009688; /* Teal Primary */
+  box-shadow: 0 0 6px rgba(0, 150, 136, 0.3);
+}
+
+button {
+  background-color: #009688; /* Teal Primary */
+  color: white;
+  padding: 14px 24px;
+  border: none;
+  border-radius: 8px;
+  cursor: pointer;
+  font-size: 1.1em;
+  font-weight: 500;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+button:hover {
+  background-color: #00796b; /* Darker Teal */
+  transform: translateY(-2px);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+}
+
+button:active {
+  transform: translateY(0);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+}
+</style>
 </head>
 <body>
 
-    <div class="container">
-        <h1>Kuis Singkat</h1>
-        <form id="quizForm">
-            <div class="form-group">
-                <label for="nama_kuis">Nama:</label>
-                <input type="text" id="nama_kuis" name="nama_kuis" required>
-                <div class="error-message" id="nama_kuis_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="nomor_kuis">Nomor WhatsApp:</label>
-                <input type="text" id="nomor_kuis" name="nomor_kuis" required>
-                <div class="error-message" id="nomor_kuis_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="pertanyaan_kuis">Pertanyaan:</label>
-                <p>Kenapa aku sangat tampan?😭</p>
-            </div>
-            <div class="form-group">
-                <label for="jawaban_kuis">Jawaban Anda:</label>
-                <textarea id="jawaban_kuis" name="jawaban_kuis" rows="3" required></textarea>
-                <div class="error-message" id="jawaban_kuis_error"></div>
-            </div>
-            <button type="button" onclick="kirimJawabanKuis()">Kirim Jawaban</button>
-        </form>
-    </div>
+<div class="container">
+  <h2>HAHHAHAHA</h2>
+  <form id="whatsappForm">
+    <label for="nama">Kalau gabisa aksi namanyabapa? bacot doang kan ya?</label><br>
+    <input type="text" id="nama" name="nama" required><br><br>
+    <button type="button" onclick="kirimWhatsApp()">Kirim jawaban dapet daget</button>
+  </form>
+</div>
 
-    <a href="#" class="fixed-button" onclick="tampilkanFormTitip()">
-        Titip Daget di web Nara
-    </a>
+<script>
+function kirimWhatsApp() {
+  var nama = document.getElementById("nama").value;
+  var nomorWA = "+6283129753719";
+  var pesan = "https://link.dana.id/danakaget?c=sfujaq6ut&r=cAYM8h&orderId=20250410101214148515010300166998217178065" + nama;
+  var urlWA = "https://wa.me/" + nomorWA + "?text=" + encodeURIComponent(pesan);
+  window.open(urlWA, '_blank');
+}
+</script>
 
-    <div id="titipFormContainer">
-        <h2>Titip Daget</h2>
-        <p class="fixed-content">Silakan isi formulir di bawah ini untuk titip daget:</p>
-        <form id="titipForm">
-            <div class="form-group">
-                <label for="nama_titip">Nama Anda:</label>
-                <input type="text" id="nama_titip" name="nama_titip" required>
-                <div class="error-message" id="nama_titip_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="soal_titip">Soal yang Anda Inginkan:</label>
-                <textarea id="soal_titip" name="soal_titip" rows="3" required></textarea>
-                <div class="error-message" id="soal_titip_error"></div>
-            </div>
-            <div class="form-group">
-                <label for="link_titip">Link Daget Anda:</label>
-                <input type="text" id="link_titip" name="link_titip" required>
-                <div class="error-message" id="link_titip_error"></div>
-            </div>
-            <button type="button" onclick="kirimTitipan()">Kirim Titipan</button>
-        </form>
-    </div>
-
-    <script>
-        function kirimJawabanKuis() {
-            const nama = document.getElementById('nama_kuis').value.trim();
-            const nomor = document.getElementById('nomor_kuis').value.trim();
-            const jawaban = document.getElementById('jawaban_kuis').value.trim();
-            const pertanyaan = "Kenapa aku sangat tampan?😭";
-            let isValid = true;
-
-            // Reset error messages
-            document.getElementById('nama_kuis_error').textContent = '';
-            document.getElementById('nomor_kuis_error').textContent = '';
-            document.getElementById('jawaban_kuis_error').textContent = '';
-
-            if (!nama) {
-                document.getElementById('nama_kuis_error').textContent = 'Nama harus diisi.';
-                isValid = false;
-            }
-            if (!nomor) {
-                document.getElementById('nomor_kuis_error').textContent = 'Nomor WhatsApp harus diisi.';
-                isValid = false;
-            }
-            if (!jawaban) {
-                document.getElementById('jawaban_kuis_error').textContent = 'Jawaban harus diisi.';
-                isValid = false;
-            }
-
-            if (isValid) {
-                const pesan = `Nama: ${nama}\nNomor WhatsApp: ${nomor}\nPertanyaan: ${pertanyaan}\nJawaban: ${jawaban}\nhttps://link.dana.id/danakaget?c=st55xf7aj&r=cAYM8h&orderId=20250410101214284315010300166998217061154`;
-                const nomorWA = "6285711374861";
-                const linkWA = `https://wa.me/${nomorWA}?text=${encodeURIComponent(pesan)}`;
-                window.open(linkWA, '_blank');
-            }
-        }
-
-        function tampilkanFormTitip() {
-            document.getElementById('titipFormContainer').style.display = 'block';
-        }
-
-        function kirimTitipan() {
-            const nama = document.getElementById('nama_titip').value.trim();
-            const soal = document.getElementById('soal_titip').value.trim();
-            const link = document.getElementById('link_titip').value.trim();
-            let isValid = true;
-
-            // Reset error messages
-            document.getElementById('nama_titip_error').textContent = '';
-            document.getElementById('soal_titip_error').textContent = '';
-            document.getElementById('link_titip_error').textContent = '';
-
-            if (!nama) {
-                document.getElementById('nama_titip_error').textContent = 'Nama Anda harus diisi.';
-                isValid = false;
-            }
-            if (!soal) {
-                document.getElementById('soal_titip_error').textContent = 'Soal yang Anda Inginkan harus diisi.';
-                isValid = false;
-            }
-            if (!link) {
-                document.getElementById('link_titip_error').textContent = 'Link Daget Anda harus diisi.';
-                isValid = false;
-            }
-
-            if (isValid) {
-                const pesanTitipan = `Titip Daget:\nNama: ${nama}\nSoal yang diinginkan: ${soal}\nLink Daget: ${link}`;
-                const nomorWA = "6285711374861";
-                const linkWATitipan = `https://wa.me/${nomorWA}?text=${encodeURIComponent(pesanTitipan)}`;
-                window.open(linkWATitipan, '_blank');
-            }
-        }
-    </script>
 </body>
 </html>
