--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ button:active {
 <div class="container">
   <h2>HAHHAHAHA</h2>
   <form id="whatsappForm">
-    <label for="nama">Kalau gabisa aksi namanyabapa? bacot doang kan ya?</label><br>
+    <label for="nama">Kalau gabisa aksi namanya apa? bacot doang kan ya?</label><br>
     <input type="text" id="nama" name="nama" required><br><br>
     <button type="button" onclick="kirimWhatsApp()">Kirim jawaban dapet daget</button>
   </form>
